# instantx

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  GOVERNANCE.md  LICENSE  LICENSE.md  MAINTAINERS.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  website.yml
deployment/: Quick-Start.md  docker-compose.yml
deployment/eventPublisher/: Dockerfile  EventPublisher.py  config.py  requirements.txt
deployment/eventPublisher/asn/: ETSI_102894_2-2.asn  ETSI_103300_1-1.asn  ETSI_103324_1-1-1.asn  ETSI_103324_3-1-1.asn  Headers.asn  ISO_14816_1-1.asn  ISO_17419_1-1.asn  ISO_24534_1-1.asn  ISO_24534_3-1.asn  ISO_TS_19091-2-012_2.asn
deployment/eventPublisher/tests/: conftest.py  test_event_publisher.py
deployment/kafka-connect/flows/: mqtt-sink-connector.json  mqtt-source-connector.json
deployment/kafka_speed_exporter/: Dockerfile  kafka_speed_exporter.py
deployment/kafka_speed_exporter/tests/: conftest.py  test_exporter.py
deployment/nifi/: Dockerfile.nifi  Dockerfile.nifi-init  nifi-init.sh
deployment/nifi/asn/: ETSI_103324_2-1-1.asn  ETSI_103324_4-1-1.asn  ETSI_103324_5-1-1.asn  (+2 more)
deployment/nifi/nifi-scripts/: README.md  encoder_decoder.py  pyproject.toml
deployment/nifi/nifi-scripts/src/: encoder_decoder.py
deployment/nifi/nifi-scripts/tests/: test_encoder_decoder.py  test_encoder_pipeline.py
deployment/observability/: prometheus.yml
docs/: AMQP_TEST.md  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Development.md  Encoding.md  Event-Publisher-oas.yaml  Event-Publisher.md  Geohashes.md  HTTP-Integration-Testing.md  Kafka.md  LICENSE-MIT  LICENSE.txt  MAINTAINERS.md  MQTT-Manual-Testing.md  MQTT-Topic-Structure.md  Nifi ExecuteStreamComand.md  SECURITY.md  SUPPORT.md  Security-Architecture.md  Threat-Model.md  v2x-messages.md
docs/planes/: openssf-fase1-passing.md  openssf-fase2-silver.md
docs/poc-agl/: README.md  how-to-install-ubuntu-22-04-on-an-arm-mac-with-utm.md  setup.md
hivemq-extension-poc/: LICENSE.txt  README.txt  application-metric-configuration-poc.yaml  hivemq-extension.xml
hivemq-prometheus-extension/: hivemq-extension.xml
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  main.tsx
(+38 files in other folders)
