[project]
name = "nifi_scripts"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asn1tools (>=0.167.0,<0.168.0)",
    "xmltodict (>=0.14.2,<0.15.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
