[project]
name = "nifi_scripts"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asn1tools (>=0.167.0,<0.168.0)",
    "xmltodict (>=0.14.2,<0.15.0)"
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
ruff = "^0.15.16"
bandit = "^1.8.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Linting (ruff) and static analysis (bandit) for the NiFi scripts.
# See ../../../docs/Development.md for how to run these across all first-party Python.
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# The test fixture embeds a single-line ETSI DENM XML payload that must stay intact.
"**/tests/**" = ["E501"]

[tool.bandit]
exclude_dirs = ["tests"]
